fixed blurry map with gmaps4rails_map

--- a/app/assets/stylesheets/gmaps4rails.css
+++ b/app/assets/stylesheets/gmaps4rails.css
@@ -9,7 +9,7 @@
   width: 800px;
 }
 
-.gmaps4rails_map {
+.gmaps4rails_map img{max-width: none;} {
   width: 120%;
   height: 500px;
   margin-left: 5%;
